test/semantic_analysis/interfejsi.mj
program Test

interface i1{
    int im1(int a){
        return 0;
    }

    char deklaracija1();
}

class c0 extends i1{
    int y;
    {
        int metoda1(){
                return 0;
        }
        char deklaracija1(){
            return 'a';
        }

    }
}

class c1 extends c0{

}

class c2{

}

int a1;
set s1;

{
	void main() c0 o0; c1 o1; c2 o2; int a;{
        // a = 2;
        // o1 = new c1();
        // o2 = new c2();
        // o0 = o1; // ok
        // o0 = a; // error
        // o0 = c2; // error
        // c2 = o0; // error

        s1 = new set[3];
	}
}